Delete styles related to the issue of having white space underneath my box-shadow on screen sizes that are 363 pixels and larger, add margin to body to get rid of white space on the sides of my webpage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,6 @@
 
 /* Asterisk wildcard selector to override default styles added by the browser */
 * {
-    padding: 0;
-    margin: 0;
     box-sizing: border-box;
 }
 
@@ -16,6 +14,9 @@ body {
     /* Generic project styles */
     color: #3a3a3a;
     font-family: "Montserrat", sans-serif;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
 /* Header */
@@ -50,7 +51,7 @@ h1 {
 }
 
 #navbar>li {
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 .active {
@@ -87,7 +88,7 @@ main {
     background-color: rgb(243, 7, 58);
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
-    margin-top: 80px;
+    margin-top: 50px;
 }
 
 /* Footer */
@@ -135,8 +136,16 @@ main {
         margin: 0 0.5rem;
     }
 
-    /*Push main content down to accommodate larger header */
-    main{
-        margin-top: 150px;
+    /* Main content */
+    main {
+        /* Push main content down to accommodate larger header */
+        margin-top: 0;
+    }
+}
+
+/* Large devices (laptops and desktops, 992px and up) */
+@media screen and (min-width: 992px) {
+    #menu a:hover {
+        border-bottom: 1px solid #3a3a3a;
     }
 }
